# Turret_2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeListsWindows.txt  LICENSE  README.en.md  README.md  Turret_2.sln  Turret_2.slnx  Turret_2.vcxproj  Turret_2.vcxproj.filters  backlog.txt  controls.tin  test.tin
.github/workflows/: build.yml  release.yml
Turret_2_test/: Turret_2_test.sln  test.cpp
cmake_proj/: CMakeLists.txt
code_analyzer/: code_analyzer.bat  code_analyzer.py  string_counter.bat  string_counter.py
libs/GCC_so/: libSDL3_image.so.0  libSDL3_mixer.so.0  libangelscript64.so.2.37.0
libs/MSVC_lib/: SDL3_mixer.lib  angelscript64.lib  angelscript64d.lib
libs/include/CSP/: centralized_ptr.hpp  csp_config.hpp
libs/include/TOML/: cpptoml.h
libs/licenses/: angelscript.txt
res/: controls.toml  generation.toml  textures.list  world_content.toml
res/content/: content_indexes.tin  textures.list
res/content/blocks/: belt.tin  big_iron_wall.tin  cannon_turret.tin  core.tin  drill.tin  gatling_turret.tin  intersection.tin  iron_wall.tin  laser_turret.tin  router.tin
res/content/items/: item_coal.tin  item_copper.tin  item_iron.tin  item_manganum.tin
res/content/mobs/: cannoner_bot.tin  gatling_bot.tin  shuttle.tin
res/content/ores/: overlay_coal.tin  overlay_copper.tin  overlay_iron.tin  overlay_manganum.tin
res/content/recipes/: belt.tin  big_iron_wall.tin  cannon_turret.tin  core.tin  drill.tin  gatling_turret.tin  intersection.tin  iron_wall.tin  laser_turret.tin  router.tin
res/content/shells/: autocannon_shell.tin  cannon_shell.tin
res/content/turrets/: cannon_turret.tin  cannoner_bot_turret.tin  gatling_bot_turret.tin  gatling_turret.tin  laser_turret.tin  shuttle_turret.tin
res/content/waves/: default.jtin
res/fonts/: custom_symbols.tin
res/generation/: floor.tin  overlay.tin
res/lang/: en_US.tin  ru_RU.tin
res/shaders/: fragment_build_beam.glsl  fragment_emerge.glsl  fragment_lighting.glsl  fragment_shadow.glsl  fragment_shield.glsl  fragment_texturing.glsl  fragment_ui.glsl  vertex.glsl  vertex_emerge.glsl  vertex_lighting.glsl  vertex_ui.glsl
src/: config.hpp  main.cpp  sp_test.hpp  sprite.hpp  window.hpp
src/coords/: pixel_coord.hpp  tile_coord.hpp  transforms.cpp  transforms.hpp
src/debug/: logger.cpp  logger.hpp
src/engine/: editor_gui.hpp  engine.cpp  engine.hpp  engine_command.hpp  engine_state.hpp  game_session.cpp  game_session.hpp  gameplay_gui.hpp  gui.cpp  gui.hpp  menu_gui.hpp  tile_data.hpp  time_count.hpp
src/engine/assets/: assets.cpp  assets.hpp  indexes.cpp  indexes.hpp  preset_defs.hpp  preset_id.hpp  preset_reader.hpp  presets.cpp  presets.hpp  shaders.hpp  waves.cpp  waves.hpp
src/engine/audio/: audio.cpp  audio.hpp  sound_queue.hpp
src/engine/content/: load_content.hpp  load_textures.cpp
src/engine/coords/: math.cpp  math.hpp  pixel_coord.hpp  tile_coord.hpp  transforms.cpp  transforms.hpp
src/engine/debug/: color_format.inl  console.cpp  console.hpp  logger.cpp  logger.hpp
src/engine/gui/: editor_gui.hpp  gameplay_gui.hpp  gui.cpp  gui.hpp  menu_gui.hpp  t1_ui_context.hpp  t1_ui_renderer.hpp
src/engine/io/: archive.cpp  archive.hpp  comon_pathes.cpp  folders.cpp  folders.hpp  io.cpp  io.hpp
src/engine/parser/: list_parser.cpp  list_parser.hpp  tin_parser.cpp  tin_parser.hpp  validator.cpp  validator.hpp
src/engine/render/: animation.hpp  atlas.cpp  atlas.hpp  border_blur.cpp  border_blur.hpp  framebuffer.hpp  render_geometry.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp  sprite.hpp  text.cpp  text.hpp  texture.hpp  texture_2d.cpp  texture_2d.hpp  texture_rect.hpp  vertex_buffer.hpp
src/engine/scripting/: scripting.cpp  scripting.hpp
src/engine/settings/: settings.cpp  settings.hpp
src/engine/util/: fast_rand.hpp  local_time.cpp  local_time.hpp  sleep.hpp  string_util.hpp  time.cpp  time.hpp
src/engine/widgets/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  clickable.cpp  clickable.hpp  container.cpp  container.hpp  form.cpp  form.hpp  image_button.cpp  image_button.hpp  label.cpp  label.hpp  layout.cpp  layout.hpp  main_canvas.hpp  selector.cpp  selector.hpp  ui_context.cpp  ui_context.hpp  ui_defs.hpp  ui_node.cpp  ui_node.hpp
src/engine/window/: cursor.cpp  cursor.hpp  window.cpp  window.hpp
src/frontend/: frontend.hpp  menu.cpp  settings.cpp  timer.cpp
src/game/: mob_type.hpp
src/game/block/: block.hpp  blocks_list.hpp  item_stack.hpp
src/game/blocks/: block.cpp  block.hpp  block_archetype.cpp  block_archetype.hpp  block_manager.cpp  block_manager.hpp  block_map.cpp  block_map.hpp  blocks.hpp  blocks_drawer.hpp  blocks_system.cpp  blocks_system.hpp  drill_system.hpp  make_block.hpp  offset_table.hpp  update_blocks.cpp
src/game/built_in_scripts/: built_in_scripts.cpp  built_in_scripts.hpp
src/render/: atlas.cpp  atlas.hpp  sprite.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
src/widgets/: button.cpp  button.hpp  container.hpp  label.cpp  layout.cpp  layout.hpp  ui_defs.hpp  ui_node.cpp  ui_node.hpp
src/window/: engine.hpp  sprite.hpp  texture.hpp  window.cpp  window.hpp
src/world/: camera.cpp  camera.hpp  world.cpp  world.hpp
test/: Turret_2_test.vcxproj  pch.h
test/tests/: centralized_ptr_test.cpp  id_manager_test.cpp  validator_test.cpp
(+281 files in other folders)
